# metasched

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  protocols_sim.txt  pyproject.toml  sample_resource_scheduling.py  sample_rule.md  test_awaitlist.py  test_driver.py
.claude/: settings.local.json
drivers/: run.py
drivers/dummy/: __init__.py  driver.py
drivers/maholo/: __init__.py  driver.py  sim_server.py
drivers/maholo/maholo_api/: client.py  model.py  protocol_generator.py  server.py
examples/: README.md  resource_scheduling.py  resource_scheduling_refactering.py
maholocon/: driver.py  sim_server.py
maholocon/maholo_api/: client.py  model.py  schemas.py  server.py
reference/: 250723_scheduling.md
sample/: experiment_7plates_fast.md  multi_task_group.md  protocol_8plates.py  protocol_8plates_fast.py  repeat_5times.md  sample_rule.md  test_run.md
sample_protocols/: demo1.py  demo1_simple.py  protocol_parallel.py  protocol_parallel_fast.py  sample_protocol.py
scripts/: analyze_log.py  execute.py  metasched.py  optimize.py  print_schedule.py
src/: agent.py  awaitlist.py  console.py  driver.py  executor.py  experiment.py  json_storage.py  labmodel.py  labware.py  logging_config.py  optimizer.py  prompt.md  protocol.py  schedule.py  scheduler.py  settings.py  value_object.py  workspace.py
src/driver/: driver.py
src/executor/: awaitlist.py  executor.py
src/logging/: json_storage.py  logging_config.py
src/protocol/: __init__.py  experiment.py  label.py  protocol.py  requirement.py
src/requirement/: requirement.py
tests/: test_awaitlist.py  test_json_storage.py  test_optimizer.py  test_protocol.py
tests/maholo_sim/: model.py  server.py  sim_server.py
(+4 files in other folders)
