[project]
name = "metashed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "ortools>=9.12.4544",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
]
