[project]
name = "metasched"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "ortools>=9.12.4544",
    "pydantic-settings>=2.10.1",
    "python-json-logger>=3.3.0",
    "rich>=14.0.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "drivers", "scripts"]

[tool.ruff.lint.per-file-ignores]
# allow unused imports in __init__.py
"__init__.py" = ["F401"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.15.9",
    "ty>=0.0.28",
]
